src/app/login/login.component.scss
@import '../../scss/variables';

:host { z-index: 1; width: 100%; height: 100%; display: block; position: absolute; }

.page {
  height: 100%;
  background-color: $primary-bg;

  .welcome {
    position: relative;
    padding: 20px 0 0;
    height: 195px;
    box-sizing: content-box;
    img { width: 100%; }

    .scrolling-binary {
      position: absolute;
      left: 0;
      right: 0;
      width: 100%;
      top: 183px;
    }
  }

  .window-container { overflow: hidden; }
}

.window {
  transition: 0.5s all;
  position: absolute;
  width: 100%;
  opacity: 0;

  &.left { transform: translateX(-100%); }
  &.middle { transform: translateX(0); opacity: 1; }
  &.right { transform: translateX(100%); }

  .banner {
    padding: 12px;
    margin-bottom: 15px;
    position:relative;
    background-color: $primary-bg-dark;

    &:after {
      content: ' ';
      width: 0;
      height: 0;
      border-left: 10px solid transparent;
      border-right: 10px solid transparent;
      border-top: 10px solid $primary-bg-dark;
      position: absolute;
      bottom: -10px;
      left: 0;
      right: 0;
      margin: auto;
      z-index: 2;
    }

    .banner-text {
      font-size: 12px;
      color: #50aeb7;
      margin: 0 0 5px 60px;
    }

    .logo {
      color: #fff;
      font-size: 20px;
      text-align: center;
      img { height: 23px; }
    }
  }

  .upper-text {
    text-align: center;
    color: #5fbbc4;
    font-size: 16px;
    margin: 30px 0 25px;
  }

  .lower-text {
    text-align: center;
    color: #fff;
    font-size: 12px;
    padding: 20px 10px 10px;
    a { color: #5fbbc4; cursor: pointer; }
  }

  .input-wrapper {
    position: relative;
    padding: 0 20px;

    input {
      height: 50px;
      width: 100%;
      padding: 5px 30px 5px 10px;
      background: rgba(0, 0, 0, 0.2);
      border: 1px solid rgba(127, 255, 252, 0.4);
      border-radius: 6px;
      color: #fff;
      font-size: 16px;
      transition: 0.2s background-color, 0.2s border-color;
      outline: 0;
      opacity: 0.5;
      &:focus {
        background: rgba(0, 0, 0, 0.6);
        border-color: rgba(127, 255, 252, 0.8);
      }
      &:disabled { background: transparent; }
      &.error {
        background: rgba(255,0,0,0.5);
        border-color: rgba(255,0,0,0.8);
      }
    }

    .error-text {
      left: 20px;
      top: 100%;
      color: rgba(255,0,0,0.8);
      margin-top: 5px;
      font-weight: 600;
      position: absolute;
    }

    button { outline: 0; }

    button.signup {
      float: right;
      position: static;
      font-size: 16px;
      line-height: 16px;
      margin: 10px 0 0;
      span {
        font-size: 20px;
      }
    }
  }

  .register-back {
    color: #5fbbc4;
    font-size: 16px;
    margin: 15px 20px 0;
    cursor: pointer;
  }

  .login-back {
    color: #5fbbc4;
    font-size: 16px;
    margin: 110px 20px 0;
    cursor: pointer;
  }
}

button {
  color: #5fbbc4;
  position: absolute;
  background-color: transparent;
  border: 0;
  right: 25px;
  top: 0px;
  font-size: 40px;
  line-height: 40px;
  cursor: pointer;
}

